implement info command to get num keys in a stash